# prettymaps-guessr-bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  prettymaps_bot.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint.yml
